fp-macros/tests/ui/apply_signature_with_lifetimes.stderr
error: 'lifetimes' parameter is not allowed with 'signature'
  --> tests/ui/apply_signature_with_lifetimes.rs:6:14
   |
 6 |       type T = Apply!(
   |  ______________^
 7 | |         brand: MyBrand,
 8 | |         signature: (i32),
 9 | |         lifetimes: ('a)
10 | |     );
   | |_____^
   |
   = note: this error originates in the macro `Apply` (in Nightly builds, run with -Z macro-backtrace for more info)
